@@ -1,3 +1,9 @@
+2007-03-05 21:21  nick
+
+	* plugins/launcher/launcher.c: Replace the enter/leave signals since there are
+	  deprecated. If someone knows a property to sync this with an exo_mutual_binding
+	  I'd like to hear it.
+
 2007-03-05 10:39  nick
 
 	* libxfce4panel/xfce-panel-macros.c: Replace the g_type_register_static_simple
